index page edits

--- a/index.html
+++ b/index.html
@@ -18,62 +18,56 @@
 <body>
 
     <h1>
-        Welcome to my page!
+       WELCOME TO MY PAGE!
     </h1>
 
-    <div class="card.about"
-        <img class="card-img-top" src="..." alt="Card image cap">
-        <div class="card-block">
-            <h4 class="card-title">About Me</h4>
-            <p class="card-text">Wanna get a closer look to the man behind the screen? Click here!</p>
-            <a href="#" class="btn btn-success">Click Here</a>
-        </div>
-    </div>
-
-    <div class="card" 
-        <img class="card-img-top" src="..." alt="Card image cap">
-        <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-success">Go somewhere</a>
-        </div>
-    </div>
-
-    <div class="card" 
-        <img class="card-img-top" src="..." alt="Card image cap">
-        <div class="card-block">
-            <h4 class="card-title">Card title</h4>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-success">Go somewhere</a>
-        </div>
-    </div>
-
-    
-
-    <div class="row">
-        <div class="col-sm-6 col-md-3">col</div>
-        <div class="col-sm-6 col-md-3">col</div>
-        <div class="col-sm-6 col-md-3">
+    <div class="col-sm-6 col-md-3">
             <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" 
                 <div class="card-block">
-                    <h4 class="card-title">Card title</h4>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-success">Go somewhere</a>
+                    <h4 class="card-title">About</h4>
+                    <p class="card-text">Learn about the man behind the screens</p>
+                    <a href="about.html" class="btn btn-success">Who is he?</a>
                 </div>
             </div>
         </div>
         <div class="col-sm-6 col-md-3">
             <div class="card">
-                <img class="card-img-top" src="..." alt="Card image cap">
+                <img class="card-img-top" 
                 <div class="card-block">
-                    <h4 class="card-title">Card title</h4>
+                    <h4 class="card-title">Projects</h4>
+                    <p class="card-text">Check out projects done by me</p>
+                    <a href="projects.html" class="btn btn-success">What has he done?</a>
+                </div>
+            </div>
+         </div>
+        <div class="col-sm-6 col-md-3">
+            <div class="card">
+                <img class="card-img-top" 
+                <div class="card-block">
+                    <h4 class="card-title">Contact</h4>
+                    <p class="card-text">Businees inquires or just want to talk? Click here</p>
+                    <a href="contact.html" class="btn btn-success">How can i reach him?</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-3">
+            <div class="card">
+                <img class="card-img-top" 
+                <div class="card-block">
+                    <h4 class="card-title">Yo Momma</h4>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                     <a href="#" class="btn btn-success">Go somewhere</a>
                 </div>
             </div>
         </div>
     </div>
+
+    <p class="about-text">
+        An aspiring web designer and coder
+    </p>
+
+    <img src="" alt="">
 
 
 
