about page complete

--- a/about.html
+++ b/about.html
@@ -15,7 +15,52 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="about-body">
+
+ <a href="index.html" class="btn btn-success">Go Home</a>
+    <h1>
+        About
+    </h1>
+
+    <img src="images/profile-pic.jpg" alt="profile picture">
+
+    <p class="about-desc">
+        My name is Joseph Hill and im an aspiring web designer and coder. Growing up as a kid I always played video games and like
+        computers. My love for video games and computers made me want to be a video game designer but soon I started to branch
+        off to web design. I didn't let my lack of resources stop me from learning how to code. Whether it be at school or
+        the library i would use the computers to verse myself in coding. Years later and i got my own computer and i would
+        spend hours trying to code but i had trouble just learning by myself. Soon I attended a mini hackathon named code
+        day and it lit the fuse for me and code even more because i learned so much and networked with many great people
+        who had a passion for coding just like me. Now I take classes at claim academy and plan to go far in the web design
+        or even video game design market.
+
+    </p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
