--- a/index.html
+++ b/index.html
@@ -17,14 +17,19 @@
 </head>
 
 <body>
-
+    <nav>
+        <a href="contact">
+            <i class="glyphicon glyphicon-pencil"></i>
+            Contact
+        </a>
+    </nav>
     <h1>
        WELCOME TO MY PAGE!
     </h1>
 
     <div class="col-sm-6 col-md-3">
             <div class="card">
-                <img class="card-img-top" 
+                <img class="card-img-top" />
                 <div class="card-block">
                     <h4 class="card-title">About</h4>
                     <p class="card-text">Learn about the man behind the screens</p>
@@ -34,7 +39,7 @@
         </div>
         <div class="col-sm-6 col-md-3">
             <div class="card">
-                <img class="card-img-top" 
+                <img class="card-img-top" /> 
                 <div class="card-block">
                     <h4 class="card-title">Projects</h4>
                     <p class="card-text">Check out projects done by me</p>
@@ -44,7 +49,7 @@
          </div>
         <div class="col-sm-6 col-md-3">
             <div class="card">
-                <img class="card-img-top" 
+                <img class="card-img-top" />
                 <div class="card-block">
                     <h4 class="card-title">Contact</h4>
                     <p class="card-text">Business inquires or just want to talk? Click here</p>
@@ -52,14 +57,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="card">
-                <img class="card-img-top" 
-                <div class="card-block">
-                    <h4 class="card-title">Yo Momma</h4>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-success">Go somewhere</a>
-                </div>
+     
             </div>
         </div>
     </div>
