--- a/projects.html
+++ b/projects.html
@@ -21,8 +21,11 @@
     </h1>
 
     <h2>
-         oh wait you actually thought I be doin stuff????
+        Im just learning this so unfortunately i dont have many projects but believe me there are more to come!
     </h2>
+    
+
+    
 
 
 
