--- a/contact.html
+++ b/contact.html
@@ -17,22 +17,28 @@
 </head>
 
 <body>
-
-<form>
-  First name:<br>
-  <input type="text" name="firstname" value="">
-  <br>
-  Last name:<br>
-  <input type="text" name="lastname" value="">
-  <br><br>
-  Email:<br>
-  <input type="email" name="email" value="">
-  <br><br>
-  <textarea name="message" id="" cols="30" placeholder="Message" rows="10"></textarea>
-  <input onclick="myFunction()" type="submit" value="Submit">
-</form> 
-
-<p>I will get back to you as soon as I can</p>
+    <div>
+        <center>
+            <form name="contactForm" onsubmit="submitContractForm()">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Name</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Name">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Email</label>
+                    <input type="email" name="email" class="form-control" id="exampleInputPassword1" placeholder="Email">
+                </div>
+                <div class="form-group">
+                </div>
+                <div class="checkbox">
+                    <label>
+      <input type="checkbox"> Check me out
+    </label>
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+            </form>
+        </center>
+    </div>
 
 
 
