It looks pretty now...kinda

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
 <body class="about-body">
 
- <a href="index.html" class="btn btn-success">Go Home</a>
+
     <h1>
         About
     </h1>
@@ -33,9 +33,25 @@
         day and it lit the fuse for me and code even more because i learned so much and networked with many great people
         who had a passion for coding just like me. Now I take classes at claim academy and plan to go far in the web design
         or even video game design market.
-
     </p>
-
+     <nav>
+         <a href="index.html">
+            <i class="glyphicon glyphicon-home"></i>
+            Go Home
+        </a>
+        <a href="contact.html">
+            <i class="glyphicon glyphicon-earphone"></i>
+            Contact Me
+        </a>
+         <a href="about.html">
+            <i class="glyphicon glyphicon-user"></i>
+            About me
+         </a>
+        <a href="projects.html">
+            <i class="glyphicon glyphicon-pencil"></i>
+          My Projects
+         </a>
+    </nav>
 
 
 
