--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,25 @@
         </center>
     </div>
 
+     <nav>
+         <a href="index.html">
+            <i class="glyphicon glyphicon-home"></i>
+            Go Home
+        </a>
+        <a href="contact.html">
+            <i class="glyphicon glyphicon-earphone"></i>
+            Contact Me
+        </a>
+         <a href="about.html">
+            <i class="glyphicon glyphicon-user"></i>
+            About me
+         </a>
+        <a href="projects.html">
+            <i class="glyphicon glyphicon-pencil"></i>
+          My Projects
+         </a>
+    </nav>
+
 
 
 
