--- a/index.html
+++ b/index.html
@@ -18,55 +18,35 @@
 
 <body>
     <nav>
-        <a href="contact">
-            <i class="glyphicon glyphicon-pencil"></i>
-            Contact
+         <a href="index.html">
+            <i class="glyphicon glyphicon-home"></i>
+            Go Home
         </a>
+        <a href="contact.html">
+            <i class="glyphicon glyphicon-earphone"></i>
+            Contact Me
+        </a>
+         <a href="about.html">
+            <i class="glyphicon glyphicon-user"></i>
+            About me
+         </a>
+        <a href="projects.html">
+            <i class="glyphicon glyphicon-pencil"></i>
+          My Projects
+         </a>
     </nav>
     <h1>
        WELCOME TO MY PAGE!
     </h1>
 
-    <div class="col-sm-6 col-md-3">
-            <div class="card">
-                <img class="card-img-top" />
-                <div class="card-block">
-                    <h4 class="card-title">About</h4>
-                    <p class="card-text">Learn about the man behind the screens</p>
-                    <a href="about.html" class="btn btn-success">Who is he?</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="card">
-                <img class="card-img-top" /> 
-                <div class="card-block">
-                    <h4 class="card-title">Projects</h4>
-                    <p class="card-text">Check out projects done by me</p>
-                    <a href="projects.html" class="btn btn-success">What has he done?</a>
-                </div>
-            </div>
-         </div>
-        <div class="col-sm-6 col-md-3">
-            <div class="card">
-                <img class="card-img-top" />
-                <div class="card-block">
-                    <h4 class="card-title">Contact</h4>
-                    <p class="card-text">Business inquires or just want to talk? Click here</p>
-                    <a href="contact.html" class="btn btn-success">How can i reach him?</a>
-                </div>
-            </div>
-        </div>
-     
-            </div>
-        </div>
-    </div>
-
+  
     <p class="about-text">
         An aspiring web designer and coder
     </p>
 
-    <img src="" alt="">
+    </p>
+
+    
 
 
 
