--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,33 @@
     <h2>
         Im just learning this so unfortunately i dont have many projects but believe me there are more to come!
     </h2>
+
+    <div class="card">
+  <img src="images/Logo.png" alt="Project logo" style="width:100%">
+  <div class="container">
+    <h4><b>CarbonDiamonds Amusement Park</b></h4> 
+    <p>Me and four other classmates had to create a website based on a the card we picked and our element team name(carbon)</p> 
+  </div>
+</div>
     
+ <nav>
+         <a href="index.html">
+            <i class="glyphicon glyphicon-home"></i>
+            Go Home
+        </a>
+        <a href="contact.html">
+            <i class="glyphicon glyphicon-earphone"></i>
+            Contact Me
+        </a>
+         <a href="about.html">
+            <i class="glyphicon glyphicon-user"></i>
+            About me
+         </a>
+        <a href="projects.html">
+            <i class="glyphicon glyphicon-pencil"></i>
+          My Projects
+         </a>
+    </nav>
 
     
 
