--- a/contact.html
+++ b/contact.html
@@ -5,27 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lemme Kno</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-        crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
-    <script src="scripts.js"></script>
+    <title>Home
+    </title>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/bootstrap-theme.css">
+
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js">
+
+    </script>
     <link rel="stylesheet" href="style.css">
 </head>
+
 
 <body>
     <div>
         <center>
             <form name="contactForm" onsubmit="submitContractForm()">
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Name</label>
+                    <label for="exampleInputEmail1"></label>
                     <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Name">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Email</label>
+                    <label for="exampleInputPassword1"></label>
                     <input type="email" name="email" class="form-control" id="exampleInputPassword1" placeholder="Email">
                 </div>
                 <div class="form-group">
