--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home
     </title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-        crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/bootstrap-theme.css">
+
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js">
+
+    </script>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav>
-         <a href="index.html">
+        <a href="index.html">
             <i class="glyphicon glyphicon-home"></i>
             Go Home
         </a>
@@ -26,27 +27,31 @@
             <i class="glyphicon glyphicon-earphone"></i>
             Contact Me
         </a>
-         <a href="about.html">
+        <a href="about.html">
             <i class="glyphicon glyphicon-user"></i>
             About me
          </a>
         <a href="projects.html">
             <i class="glyphicon glyphicon-pencil"></i>
           My Projects
+          </a>
+           <a href="projects.html">
+            <i class="glyphicon glyphicon-pencil"></i>
+          My Projects
          </a>
     </nav>
     <h1>
-       WELCOME TO MY PAGE!
+        WELCOME TO MY PAGE!
     </h1>
 
-  
+
     <p class="about-text">
         An aspiring web designer and coder
     </p>
 
     </p>
 
-    
+
 
 
 
