--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home
     </title>
+    <link rel="stylesheet" href="node_modules/animate.css/animate.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
     <link rel="stylesheet" href="node_modules/bootstrap/dist/bootstrap-theme.css">
 
@@ -34,11 +37,8 @@
         <a href="projects.html">
             <i class="glyphicon glyphicon-pencil"></i>
           My Projects
-          </a>
-           <a href="projects.html">
-            <i class="glyphicon glyphicon-pencil"></i>
-          My Projects
-         </a>
+          </a>                
+
     </nav>
     <h1>
         WELCOME TO MY PAGE!
