--- a/about.html
+++ b/about.html
@@ -5,13 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>About Me</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
-        crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"
-        crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
+    <title>Home
+    </title>
+    <link rel="stylesheet" href="node_modules/animate.css/animate.css">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/bootstrap-theme.css">
+
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js">
+
+    </script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -34,8 +39,8 @@
         who had a passion for coding just like me. Now I take classes at claim academy and plan to go far in the web design
         or even video game design market.
     </p>
-     <nav>
-         <a href="index.html">
+    <nav>
+        <a href="index.html">
             <i class="glyphicon glyphicon-home"></i>
             Go Home
         </a>
@@ -43,7 +48,7 @@
             <i class="glyphicon glyphicon-earphone"></i>
             Contact Me
         </a>
-         <a href="about.html">
+        <a href="about.html">
             <i class="glyphicon glyphicon-user"></i>
             About me
          </a>
