--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js">
 
     </script>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/styles/app.css">
 </head>
 
 
@@ -44,19 +44,19 @@
 
     <nav>
         <a href="index.html">
-            <i class="glyphicon glyphicon-home"></i>
+            <i class="glyphicon glyphicon-home bounce"></i>
             Go Home
         </a>
         <a href="contact.html">
-            <i class="glyphicon glyphicon-earphone"></i>
+            <i class="glyphicon glyphicon-earphone bounce"></i>
             Contact Me
         </a>
         <a href="about.html">
-            <i class="glyphicon glyphicon-user"></i>
+            <i class="glyphicon glyphicon-user bounce"></i>
             About me
          </a>
         <a href="projects.html">
-            <i class="glyphicon glyphicon-pencil"></i>
+            <i class="glyphicon glyphicon-pencil bounce"></i>
           My Projects
          </a>
     </nav>
