--- a/projects.html
+++ b/projects.html
@@ -5,22 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home
-    </title>
+    <title>Home</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-   
-
-
     <link rel="stylesheet" href="node_modules/bootstrap/dist/bootstrap-theme.css">
-
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js">
-
-    </script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="dist/styles/app.css">
 </head>
 
 
 <body>
+    <navigation></navigation>
     <h1>
         Projects
     </h1>
@@ -36,25 +30,18 @@
             <p>Me and four other classmates had to create a website based on a the card we picked and our element team name(carbon)</p>
         </div>
     </div>
+     <div class="card">
+        <img src="images/jquery.png" alt="Project logo" style="width:100%">
+        <div class="container">
+            <h4><b>TryJquery</b></h4>
+            <p>An online web tutorial to introduce people to jquery.
+                look at my report card here! 
+                <a href="https://www.codeschool.com/users/3958190"></a>
+            </p>
+        </div>
+    </div>
 
-    <nav>
-        <a href="index.html">
-            <i class="glyphicon glyphicon-home bounce"></i>
-            Go Home
-        </a>
-        <a href="contact.html">
-            <i class="glyphicon glyphicon-earphone bounce"></i>
-            Contact Me
-        </a>
-        <a href="about.html">
-            <i class="glyphicon glyphicon-user bounce"></i>
-            About me
-         </a>
-        <a href="projects.html">
-            <i class="glyphicon glyphicon-pencil bounce"></i>
-          My Projects
-         </a>
-    </nav>
+    
 
 
 
@@ -89,6 +76,7 @@
 
 
 
+<script src="dist/scripts/main.js"></script>
 </body>
 
 </html>
