--- a/about.html
+++ b/about.html
@@ -5,24 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home
-    </title>
+    <title>Home</title>
     <link rel="stylesheet" href="node_modules/animate.css/animate.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
     <link rel="stylesheet" href="node_modules/bootstrap/dist/bootstrap-theme.css">
-
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js">
-
-    </script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="dist/styles/app.css">
 </head>
 
 <body class="about-body">
-
-
+    <navigation></navigation>
     <h1>
         About
     </h1>
@@ -39,24 +32,8 @@
         who had a passion for coding just like me. Now I take classes at claim academy and plan to go far in the web design
         or even video game design market.
     </p>
-    <nav>
-        <a href="index.html">
-            <i class="glyphicon glyphicon-home bounce"></i>
-            Go Home
-        </a>
-        <a href="contact.html">
-            <i class="glyphicon glyphicon-earphone bounce"></i>
-            Contact Me
-        </a>
-        <a href="about.html">
-            <i class="glyphicon glyphicon-user bounce"></i>
-            About me
-         </a>
-        <a href="projects.html">
-            <i class="glyphicon glyphicon-pencil bounce"></i>
-          My Projects
-         </a>
-    </nav>
+    
+        
 
 
 
@@ -108,8 +85,7 @@
 
 
 
-
-
+<script src="dist/scripts/main.js"></script>
 </body>
 
 </html>
