--- a/contact.html
+++ b/contact.html
@@ -42,24 +42,7 @@
         </center>
     </div>
 
-    <nav>
-        <a href="index.html">
-            <i class="glyphicon glyphicon-home bounce"></i>
-            Go Home
-        </a>
-        <a href="contact.html">
-            <i class="glyphicon glyphicon-earphone bounce"></i>
-            Contact Me
-        </a>
-        <a href="about.html">
-            <i class="glyphicon glyphicon-user bounce"></i>
-            About me
-         </a>
-        <a href="projects.html">
-            <i class="glyphicon glyphicon-pencil bounce"></i>
-          My Projects
-         </a>
-    </nav>
+    <navigation></navigation>
 
 
 
@@ -91,7 +74,7 @@
 
 
 
-
+    <script src="dist/scripts/main.js"></script>
 </body>
 
 </html>
