--- a/index.html
+++ b/index.html
@@ -5,41 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Home
-    </title>
+    <title>Home</title>
     <link rel="stylesheet" href="node_modules/animate.css/animate.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
     <link rel="stylesheet" href="node_modules/bootstrap/dist/bootstrap-theme.css">
-
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js">
-
-    </script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="dist/styles/app.css">
 </head>
 
 <body>
-    <nav>
-        <a href="index.html">
-            <i class="glyphicon glyphicon-home bounce"></i>
-            Go Home
-        </a>
-        <a href="contact.html">
-            <i class="glyphicon glyphicon-earphone bounce"></i>
-            Contact Me
-        </a>
-        <a href="about.html">
-            <i class="glyphicon glyphicon-user bounce"></i>
-            About me
-         </a>
-        <a href="projects.html">
-            <i class="glyphicon glyphicon-pencil bounce"></i>
-          My Projects
-          </a>                
-
-    </nav>
+    
     <h1>
         WELCOME TO MY PAGE!
     </h1>
@@ -51,6 +27,14 @@
 
     </p>
 
+    
+
+
+
+
+
+
+    <navigation></navigation>
 
 
 
@@ -80,14 +64,7 @@
 
 
 
-
-
-
-
-
-
-
-
+<script src="dist/scripts/main.js"></script>
 </body>
 
 </html>
